--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+build-iso (2005) unstable; urgency=medium
+
+ * DANOS Import master
+
+ -- Vyatta Package Maintainers <DL-vyatta-help@att.com> Wed, 3 Nov 2019 23:00:00 +0000
+
 build-iso (1908.1) unstable; urgency=medium
 
  * DANOS Import
