--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,53 @@
+build-iso (2005.1) unstable; urgency=medium
+
+  [ Nick Brown ]
+  * correctly tee the command and return status to the build.log
+
+  [ John Southworth ]
+  * Add dependency on xz-utils
+
+  [ Nicholas Brown ]
+  * add some package lists for negative package testing
+
+  [ James Wheatley ]
+  * Add IPsec remote access server feature
+
+  [ Philip Downey ]
+  * Add platform deviation support for interface speed restriction
+    (Fixes: VRVDR-44331)
+
+  [ Mark Gillott ]
+  * Add YANG for monitor interfaces (Fixes: VRVDR-49651)
+
+  [ Robert Shearman ]
+  * Add package for storm control config on bonding interfaces
+
+  [ Anthony Dempsey ]
+  * Add state and switch VRRP yang files
+
+  [ Srinivas Narayan ]
+  * Create a package list for systemtap
+
+  [ Duncan Eastoe ]
+  * Add show/reset login op YANG module packages
+
+  [ Charles (Chas) Williams ]
+  * Include SIAD specific deviations for vyatta-system-misc
+    (Bugfix: VRVDR-49991)
+
+  [ Paul Carson ]
+  * Include show system confirmed-commit (Closes: VRVDR-49960)
+
+  [ James Wheatley ]
+  * Add vyatta-system-iommu-v1-yang to package list (Fixes: VRVDR-50431)
+
+  [ William Ivory ]
+  * Restore missing deprecated YANG for logging commands
+
+  [ Colin Docherty ]
+
+ -- Colin Docherty <colin.docherty@att.com>  Fri, 03 Apr 2020 01:56:19 -0700
+
 build-iso (2005) unstable; urgency=medium
 
  * DANOS Import master
