--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+build-iso (2005.3) unstable; urgency=medium
+
+  * Basic journal configuration should be part of all images.
+    (Fixes: VRVDR-50689)
+
+ -- Nicholas Brown <nick.brown@att.com>  Thu, 16 Apr 2020 14:38:37 +0100
+
 build-iso (2005.2) unstable; urgency=medium
 
   [ Daniel Gollub ]
