--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,34 @@
+build-iso (2105) unstable; urgency=medium
+
+  [ Nicholas Brown ]
+  * Include yang for add system image routing instance support
+    (Closes: VRVDR-52953)
+
+  [ James Wheatley ]
+  * Add --force-yes to apt options
+  * Remove excludes from sandbox hook
+  * Switch sandbox hook to mmdebstrap
+
+  [ Duncan Eastoe ]
+  * vyatta-routing-instance: Add python3-vrfmanager
+  * vyatta-yang-protocols-frr: Include IS-IS packages
+  * sandbox: clean up /etc/sources.list.d/dummy
+
+  [ Shweta Choudaha ]
+  * Add s9500-30xs backplane deviation yang
+
+  [ Duncan Eastoe ]
+  * Isolate SSSD from user sandboxes
+  * Ensure sandbox GIDs are consistent with host
+
+  [ Nicholas Brown ]
+  * Add syslog-enhanced to same package lists as syslog
+
+  [ Dewi Morgan ]
+  * package-list: add dhcp client intf to package list
+
+ -- Colin Docherty <colin.docherty@att.com>  Mon, 14 Dec 2020 15:55:23 +0000
+
 build-iso (2010) unstable; urgency=medium
 
   [ Nick Brown ]
