--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+build-iso (2105.1) unstable; urgency=medium
+
+  [ Duncan Eastoe ]
+  * 0990-create-chroot-fs.chroot: remove perl-doc
+  * Remove vyatta-system-login-radius-routing-instance-v1-yang
+
+  [ Nicholas Brown ]
+  * update to ndpi 3.4
+
+  [ Brian Russell ]
+  * add policy filter to qos list
+
+  [ James Wheatley ]
+  * Add FRR next hop YANG packages
+
+  [ Sharmila Podury ]
+  * Unable to renew password via ssh
+
+ -- Colin Docherty <colin.docherty@att.com>  Wed, 19 May 2021 17:26:37 +0100
+
 build-iso (2105) unstable; urgency=medium
 
   [ Nicholas Brown ]
