--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+build-iso (2105.2) unstable; urgency=medium
+
+  [ Srinivas Narayan ]
+  * Add vyatta-interfaces-system-v1.yang to image
+
+  [ Charles (Chas) Williams ]
+  * Include the GNSS YANG files (Bugfix: VRVDR-54881, VRVDR-54882, VRVDR-54883)
+
+ -- William Ivory <william.ivory@intl.att.com>  Wed, 21 Jul 2021 14:39:18 +0100
+
 build-iso (2105.1) unstable; urgency=medium
 
   [ Duncan Eastoe ]
